# Dynamsoft-Barcode-Reader

./: .gitignore  README.md
Images/: BlurScannedDocument.tif
lib/Windows/x86/: DBRx86.lib
samples/ASP.Net/BarcodeReaderDemo/: BarcodeReaderDemo_VS2008.sln  BarcodeReaderDemo_VS2010.sln  BarcodeReaderDemo_VS2012.sln  BarcodeReaderDemo_VS2013.sln
samples/C#/BarcodeReaderDemo/: BarcodeReaderDemo_VS2008.sln  BarcodeReaderDemo_VS2010.sln  BarcodeReaderDemo_VS2012.sln  BarcodeReaderDemo_VS2013.sln
samples/C#/DecodeMultiBarcodes/: DecodeMultiBarcodes_VS2008.sln  DecodeMultiBarcodes_VS2010.sln  DecodeMultiBarcodes_VS2012.sln  DecodeMultiBarcodes_VS2013.sln  DecodeMultiBarcodes_VS2015.sln
samples/C#/DecodeSingleBarcode/: DecodeSingleBarcode_VS2008.sln  DecodeSingleBarcode_VS2010.sln  DecodeSingleBarcode_VS2012.sln  DecodeSingleBarcode_VS2013.sln  DecodeSingleBarcode_VS2015.sln
samples/C#/ReadBarcodeFromPDFFile/: ReadBarcodeFromPDFFile_VS2008.sln  ReadBarcodeFromPDFFile_VS2010.sln  ReadBarcodeFromPDFFile_VS2012.sln  ReadBarcodeFromPDFFile_VS2013.sln
samples/C#/ReadBarcodeFromRegion/: ReadBarcodeFromRegion_VS2008.sln  ReadBarcodeFromRegion_VS2010.sln  ReadBarcodeFromRegion_VS2012.sln  ReadBarcodeFromRegion_VS2013.sln  ReadBarcodeFromRegion_VS2015.sln
samples/C#/TriggerEventAfterDecoding/: TriggerEventAfterDecoding_VS2008.sln  TriggerEventAfterDecoding_VS2010.sln  TriggerEventAfterDecoding_VS2012.sln  TriggerEventAfterDecoding_VS2013.sln  TriggerEventAfterDecoding_VS2015.sln
samples/C++/BarcodeReaderDemo/: BarcodeReaderDemo.cpp  BarcodeReaderDemo_VS2008.sln  BarcodeReaderDemo_VS2008.vcproj  BarcodeReaderDemo_VS2010.vcxproj  BarcodeReaderDemo_VS2012.sln  BarcodeReaderDemo_VS2012.vcxproj  BarcodeReaderDemo_VS2013.vcxproj  BarcodeReaderDemo_VS2015.vcxproj  CMakeLists.txt  README.md
samples/C++/BatchDecode/: BatchDecode_VS2008.sln  BatchDecode_VS2010.sln  BatchDecode_VS2012.sln  BatchDecode_VS2013.sln  BatchDecode_VS2015.sln  CMakeLists.txt
samples/C++/BatchDecode/BatchDecode/: BarcodeFileReader.cpp  BarcodeFileReader.h  BarcodeStatisticsRecorder.cpp  BarcodeStatisticsRecorder.h  BatchDecode.cpp  BatchDecode_VS2008.vcproj  BatchDecode_VS2010.vcxproj  BatchDecode_VS2012.vcxproj  BatchDecode_VS2013.vcxproj  BatchDecode_VS2015.vcxproj  DbrBarcodeFileReader.cpp  DbrBarcodeFileReader.h  stdafx.cpp
samples/C/BarcodeReaderDemo/: BarcodeReaderDemo.c  (+9 more)
samples/Node.js/: dbr.cc  index.html  log.txt  package.json  restful.htm  restfulserver.js  video.js
templates/: Doc Mode + Best Accuracy.json  Doc Mode + Best Speed.json  Photo Mode + Best Accuracy.json  Photo Mode + Best Speed.json  all_default.json  codabar_default.json  code128_default.json  code39_default.json  code93_default.json  datamatrix_default.json  default_settings.json  ean13_default.json  ean8_default.json  industrial25_default.json  itf_default.json  oned_default.json  pdf417_default.json  qrcode_default.json  template_aggregation.json  tpl_all_default.json  tpl_codabar_default.json  tpl_code128_default.json  tpl_code39_default.json  tpl_code93_default.json  tpl_datamatrix_default.json  tpl_ean13_default.json  tpl_ean8_default.json  tpl_industrial25_default.json  tpl_itf_default.json  tpl_oned_default.json  tpl_pdf417_default.json  tpl_qrcode_default.json  tpl_upca_default.json  tpl_upce_default.json  upca_default.json  upce_default.json
(+112 files in other folders)
